fixed z-index of responseCode editor wrapped ArrayOutOfBoundsException while forming answer of IntegrationPoint suggestion controller

--- a/mock-interactive/src/main/webapp/resources/css/editor.css
+++ b/mock-interactive/src/main/webapp/resources/css/editor.css
@@ -41,11 +41,13 @@
 #code {
     height: 400px;
     border: 1px gainsboro solid;
+    z-index: 0;
 }
 
 #resCode {
     height: 648px;
     border: 1px gainsboro solid;
+    z-index: 0;
 }
 
 #codeWrapper {
